<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/first_quarter_of_the_year"
        android:textStyle="bold"
        android:textColor="@color/Red"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/Red"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal"
           >

           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:gravity="center"
               android:text="@string/jan"
               android:textSize="15sp"
               android:background="@color/Blue"
               android:layout_marginTop="3dp"
               android:textColor="@color/white"
               android:id="@+id/txtJan"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:src="@drawable/spring1"
               android:scaleType="centerCrop"
               android:layout_marginTop="3dp"
               android:layout_marginLeft="4dp"
               android:id="@+id/imgjan"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:layout_margin="15dp">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/feb"
               android:textSize="15dp"
               android:background="@color/Blue"
               android:gravity="center"
               android:textColor="@color/white"
               android:id="@+id/txtfeb"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:src="@drawable/spring2"
               android:scaleType="fitXY"
               android:layout_marginLeft="3dp"
               android:id="@+id/imgfeb"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/mar"
               android:textSize="15sp"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:gravity="center"
               android:id="@+id/txtmar"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:src="@drawable/spring3"
               android:scaleType="fitXY"
               android:layout_marginLeft="3dp"
               android:id="@+id/imgmar"/>


       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/second_quarter_of_the_year"
           android:textSize="30sp"
           android:textStyle="bold"
           android:textColor="@color/Red"/>
       <View
           android:layout_width="match_parent"
           android:layout_height="5dp"
           android:background="@color/Red"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/apr"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtapr"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/summer1"
               android:scaleType="fitXY"
               android:id="@+id/imgapr"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/may"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtmay"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginStart="3dp"
               android:src="@drawable/summer2"
               android:scaleType="fitXY"
               android:id="@+id/imgmay"/>
       </LinearLayout>
       <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="15dp"
       android:orientation="horizontal">
       <TextView
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:text="@string/jun"
           android:background="@color/Blue"
           android:textColor="@color/white"
           android:textSize="15sp"
           android:gravity="center"
           android:id="@+id/txtjun"/>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:layout_marginLeft="3dp"
           android:src="@drawable/summer3"
           android:scaleType="fitXY"
           android:id="@+id/imgjun"/>
   </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/third_quarter_of_the_year"
           android:textSize="30sp"
           android:textStyle="bold"
           android:textColor="@color/Red"/>
       <View
           android:layout_width="match_parent"
           android:layout_height="5dp"
           android:background="@color/Red"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/jul"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtjul"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/autumn1"
               android:scaleType="fitXY"
               android:id="@+id/imgjul"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/aug"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtaug"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/autumn2"
               android:scaleType="fitXY"
               android:id="@+id/imgaug"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/sep"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtsep"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/autumn3"
               android:scaleType="fitXY"
               android:id="@+id/imgsep"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/last_quarter_of_the_year"
           android:textSize="30sp"
           android:textStyle="bold"
           android:textColor="@color/Red"/>
       <View
           android:layout_width="match_parent"
           android:layout_height="5dp"
           android:background="@color/Red"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/oct"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtoct"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/winter3"
               android:scaleType="fitXY"
               android:id="@+id/imgoct"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/nov"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtnov"/>
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/winter2"
               android:scaleType="fitXY"
               android:id="@+id/imgnov"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:text="@string/dec"
               android:background="@color/Blue"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:gravity="center"
               android:id="@+id/txtdec" />
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:layout_marginLeft="3dp"
               android:src="@drawable/winter1"
               android:scaleType="fitXY"
               android:id="@+id/imgdec"/>
       </LinearLayout>
   </LinearLayout>
</ScrollView>

